--- a/demo-runoob-JavaScript/21.JSON函数.html
+++ b/demo-runoob-JavaScript/21.JSON函数.html
@@ -28,5 +28,15 @@
     });
     console.log(b_toJson);
     console.log(typeof b_toJson);//object
+
+    var c = {
+        firstName: "John",
+        lastName: "Doe",
+        age: 25
+    };
+
+    for (var i in c) {
+        console.log(c[i]);
+    }
 </script>
 </html>
