--- a/下拉菜单/下拉菜单1.html
+++ b/下拉菜单/下拉菜单1.html
@@ -23,7 +23,7 @@
 
         #nav-header {
             position: relative;
-            font: 15px 'microsoft yahei', sans-serif normal;
+            font: 15px/1em 'microsoft yahei', sans-serif normal;
             margin: 30px auto;
             text-align: center;
             white-space: nowrap;
