--- a/我的坑/HTML/form子元素隐藏无法提交.html
+++ b/我的坑/HTML/form子元素隐藏无法提交.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-<form>
+<form method="post" role="form">
     <input type="text" required="required" style="display: none;">
-    <button>123</button>
+    <button type="submit">123</button>
 </form>
 
 </body>
