--- a/我的坑/JavaScript/原生js取width.html
+++ b/我的坑/JavaScript/原生js取width.html
@@ -30,6 +30,7 @@
     console.log(div[0].offsetWidth);//300
 
     div[0].style.width = 500 + 'px';
+    console.log(div[0].width);//undefined
     console.log(div[0].style.width);//500px
     console.log(div[0].offsetWidth);//500
 </script>
