--- a/我的坑/jsonToString.html
+++ b/我的坑/jsonToString.html
@@ -32,6 +32,7 @@
         var str = json2str(json);
 
         console.log(str);
+        console.log(JSON.stringify(json));
 
     </script>
 </head>
