--- a/我的坑/margin-top.html
+++ b/我的坑/margin-top.html
@@ -4,26 +4,12 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
-        blockquote, body, button, dd, dl, dt, fieldset, form, h1, h2, h3, h4, h5, h6, hr, input, legend, li, ol, p, pre, td, textarea, th, ul {
-            margin: 0;
-            padding: 0;
-        }
-
-        ul li {
-            list-style-type: none;
-        }
-
-        a {
-            text-decoration: none;
-        }
-
         #div1{
             width: 400px;
             height: 400px;
             background-color: #000066;
             margin-top: 10px;
-            border: 1px;
-            position: relative;
+            overflow: hidden;
         }
 
         #div2{
