--- a/我的坑/自营式图片.html
+++ b/我的坑/自营式图片.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
-        img {
-            background: url(/zd/images/0.jpg);
-            background-size: contain;
+        .img1{
+            width: 300px;
+            height: 300px;
+            background: url(../images/0.jpg) no-repeat;
         }
     </style>
 </head>
 <body>
 
-<img width="300" height="300">
+<img class="img1">
+<img width="300" src="../images/0.jpg">
 
 </body>
 </html>
