--- a/我的坑/HTML/form button问题.html
+++ b/我的坑/HTML/form button问题.html
@@ -31,17 +31,17 @@
 
 </body>
 <script>
-    //    将event事件通过参数传入进来，再去掉默认事件
-    function clickDefault(e) {
-        console.log(e);
-        e.preventDefault();
-    }
-
-    document.getElementById('btn3').onclick = function (e) {
-        console.log(e);
-        e.preventDefault();
-    };
-
-    document.getElementById('btn5').addEventListener('click', clickDefault, false);
+//    //    将event事件通过参数传入进来，再去掉默认事件
+//    function clickDefault(e) {
+//        console.log(e);
+//        e.preventDefault();
+//    }
+//
+//    document.getElementById('btn3').onclick = function (e) {
+//        console.log(e);
+//        e.preventDefault();
+//    };
+//
+//    document.getElementById('btn5').addEventListener('click', clickDefault, false);
 </script>
 </html>
