--- a/我的坑/JavaScript/slice和splice.html
+++ b/我的坑/JavaScript/slice和splice.html
@@ -8,12 +8,11 @@
 
 </body>
 <script>
-
-    var num=[1,2,3];
-
-    num[2].remove();
+    var num = ['牛奶', '啤酒', '水果'];
 
     console.log(num);
-
+    console.log(num.slice(1,2));
+    num.splice(1);
+    console.log(num);
 </script>
 </html>
