--- a/我的坑/JavaScript/undefined和null比较.html
+++ b/我的坑/JavaScript/undefined和null比较.html
@@ -8,7 +8,6 @@
 
 </body>
 <script>
-
     var oValue;
     console.log(oValue === undefined); //true 这段代码显示为true,代表oVlaue的值即为undefined，因为我们没有初始化它。
     console.log(oValue === null); //false
@@ -19,9 +18,8 @@
 
     console.log(typeof undefined);//undefined
     console.log(typeof null);//object null即是一个不存在的对象的占位符
-    console.log(null == undefined)//true ECMAScript认为undefined是从null派生出来的，所以把它们定义为相等的。但是，如果在一些情况下，我们一定要区分这两个值，
-    console.log(null === undefined)//false
-    console.log(typeof null == typeof undefined)//false
-
+    console.log(null == undefined);//true ECMAScript认为undefined是从null派生出来的，所以把它们定义为相等的。但是，如果在一些情况下，我们一定要区分这两个值，
+    console.log(null === undefined);//false
+    console.log(typeof null == typeof undefined);//false
 </script>
 </html>
