--- a/我的坑/css/last-of-type.html
+++ b/我的坑/css/last-of-type.html
@@ -17,14 +17,28 @@
             color: #fff;
         }
 
-        ul :last-of-type{
+        #ul1 :last-of-type{
            background-color: #f06060;
+        }
+
+        #ul2 :last-child{
+            background-color: #f06060;
         }
     </style>
 </head>
 <body>
 
-<ul>
+<ul id="ul1">
+    <li>111</li>
+    <li>222</li>
+    <li>333</li>
+    <li>444</li>
+    <span>555</span>
+    <span>666</span>
+    <li>777</li>
+</ul>
+
+<ul id="ul2">
     <li>111</li>
     <li>222</li>
     <li>333</li>
