--- a/我的坑/css/table颜色设置.html
+++ b/我的坑/css/table颜色设置.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
-        .table1{
+        #table1{
             border-color: #ccc;
             border-collapse: collapse;
         }
 
-        .table2{
+        #table2{
             border-collapse: collapse;
         }
 
-        .table2 th,
-        .table2 td{
+        #table2 th,
+        #table2 td{
             border: 1px solid #ccc;
         }
     </style>
 </head>
 <body>
 
-<table class="table1" border="1">
+<table id="table1" border="1">
     <thead>
     <tr>
         <th>id</th>
@@ -52,7 +52,7 @@
     </tbody>
 </table>
 
-<table class="table2">
+<table id="table2">
     <thead>
     <tr>
         <th>id</th>
