--- a/我的坑/css/父级祖级百分比.html
+++ b/我的坑/css/父级祖级百分比.html
@@ -10,7 +10,7 @@
         }
 
         #div2{
-            height: 400px;
+            /*height: 400px;*/
             background-color: #f06060;
         }
 
