--- a/我的坑/垂直居中.html
+++ b/我的坑/垂直居中.html
@@ -4,28 +4,18 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
-        *{
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        ul{
-            font-size: 0;
-        }
-
         ul li{
-            width: 19%;
+            width: 20%;
             display: inline-block;
-            vertical-align: middle
         }
 
         ul li:last-of-type{
-            width: 5%;
+            width: 10%;
         }
 
         ul li img{
             width: 100%;
+            vertical-align: middle
         }
     </style>
 </head>
@@ -47,19 +37,9 @@
     <li>
         <img src="../images/0.jpg">
     </li>
-
-    <li>
-        <img src="../images/0.jpg">
-    </li>
-
-    <li>
-        <img src="../images/0.jpg">
-    </li>
 </ul>
 
-<br/>
-<br/>
-<img src="../images/0.jpg" width="500" style="vertical-align: middle">123
-
+<img src="../images/0.jpg" width="500" style="vertical-align: middle;">
+123
 </body>
 </html>
