--- a/我的坑/css/a元素的包裹问题.html
+++ b/我的坑/css/a元素的包裹问题.html
@@ -34,7 +34,7 @@
 <body>
 
 <a>
-    <img src="../../images/0.jpg" width="300">
+    <img src="../0.jpg" width="300">
     <span>Nexus</span>
 </a>
 
