--- a/我的坑/css/span内联元素效果.html
+++ b/我的坑/css/span内联元素效果.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
-        span,div{
+        #span1{
             width: 30px;
             height: 50px;
             padding: 10px;
@@ -14,13 +14,22 @@
         }
 
         /*span是内联元素，只有margin-left,margin-right,padding有效果*/
+
+        #div1{
+            width: 30px;
+            height: 50px;
+            padding: 10px;
+            margin: 10px;
+            border: 1px solid black;
+            background-color: #EEE;
+        }
     </style>
 </head>
 <body>
 
-<span>1111</span>
+<span id="span1">1111</span>
 
-<div>222</div>
+<div id="div1">222</div>
 
 </body>
 </html>
