--- a/我的坑/css/绝对定位.html
+++ b/我的坑/css/绝对定位.html
@@ -17,6 +17,7 @@
             width: 300px;
             height: 300px;
             border: 50px solid green;
+            margin: 100px;
             background-color: yellow;
             position: absolute;
             left: 50px;
