--- a/我的坑/css/自营式图片.html
+++ b/我的坑/css/自营式图片.html
@@ -7,7 +7,8 @@
         .img1{
             width: 300px;
             height: 300px;
-            background: url(../images/0.jpg) no-repeat;
+            background: url(../images/0.jpg) no-repeat center center;
+            background-size:300px 300px;
         }
     </style>
 </head>
