--- a/demo-深入理解JavaScript/1.原生函数/1.eval.html
+++ b/demo-深入理解JavaScript/1.原生函数/1.eval.html
@@ -9,7 +9,8 @@
 </body>
 <script>
     //    eval() 函数可计算某个字符串，并执行其中的的 JavaScript 代码。
-    //    该方法只接受原始字符串作为参数，如果 string 参数不是原始字符串，那么该方法将不作任何改变地返回。因此请不要为 eval() 函数传递 String 对象来作为参数。
+    //    该方法只接受原始字符串作为参数，如果 string 参数不是原始字符串，那么该方法将不作任何改变地返回。
+    //    因此请不要为 eval() 函数传递 String 对象来作为参数。
 
     console.log(eval(123));//123 返回原始行参
 
