--- a/demo-VueJs/1-起步/4.渲染列表-2.html
+++ b/demo-VueJs/1-起步/4.渲染列表-2.html
@@ -16,33 +16,37 @@
 
     <ul>
         <li v-for="m in messagesList">
+            <a :href="m.url" v-text="m.url"></a>
+        </li>
+    </ul>
+
+    <ul>
+        <li v-for="m in messagesList">
             <a href="{{m.url}}">{{m.url}}</a>
         </li>
     </ul>
 </div>
 
 </body>
-<script type="text/javascript">
-
+<script>
     new Vue({
         el: '#app',
         data: {
             messagesList: [],
         },
         methods: {
-            addLi: function () {
+            addLi() {
                 this.messagesList.push({url: 'http://www.baidu.com'});
                 this.messagesList.push({url: 'http://www.sina.com'});
                 this.messagesList.push({url: 'http://www.163.com'});
                 this.messagesList.shift();
             }
         },
-        ready: function () {
-            var self = this;
+        ready() {
+            let self = this;
 
             self.addLi();
         }
     })
-
 </script>
 </html>
