--- a/demo-VueJs/1-起步/5.综合应用-1.html
+++ b/demo-VueJs/1-起步/5.综合应用-1.html
@@ -8,25 +8,19 @@
 <body>
 
 <div id="app">
-
     <input v-model="newTodo" v-on:keyup.enter="addTodo">
-
     <button v-on:click="addTodo">添加</button>
-
-    <button v-on:click="cleanAll">清除</button>
-
+    <button v-on:click="cleanInput">清除</button>
     <ul>
         <li v-for="todo in todos">
-            <span>{{ todo.text }}</span>
-            <button v-on:click="removeTodo($index)">X</button>
+            {{ todo.text }}
+            <button @click="removeTodo($index)">X</button>
         </li>
     </ul>
-
 </div>
 
 </body>
-<script type="text/javascript">
-
+<script>
     new Vue({
         el: '#app',
         data: {
@@ -37,7 +31,7 @@
         },
         methods: {
 //            添加
-            addTodo: function () {
+            addTodo() {
                 var self = this;
                 var text = self.newTodo.trim();
 
@@ -48,18 +42,16 @@
             },
 
 //            删除
-            removeTodo: function (index) {
+            removeTodo(index) {
                 console.log(index);
-//                splice() 方法向/从数组中添加/删除项目，然后返回被删除的项目。该方法会改变原始数组。
                 this.todos.splice(index, 1);
             },
 
 //          清除
-            cleanAll: function () {
+            cleanInput() {
                 this.newTodo = '';
             }
         }
     })
-
 </script>
 </html>
