--- a/demo-css88-jQuery中文手册/1-选择器/1-基本/1.星号选择器.html
+++ b/demo-css88-jQuery中文手册/1-选择器/1-基本/1.星号选择器.html
@@ -34,23 +34,11 @@
             /*display: inline-block;*/
         }
 
-        /*float: left导致#test包裹子元素,body没有包裹浮动的#test*/
+        /*float: left导致#test包裹子元素,body没有包裹本身浮动的#test*/
 
         /*浮动导致body没有包裹#test，#test可设置为inline-block,body会包裹下面3个元素*/
-        /*清除浮动元素: 1. overflow: hidden...  2: float...  3: *:before:{clear:both}...*/
+        /*清除浮动元素: 1.overflow: hidden...  2.float...  3.*:after:{clear:both}*/
     </style>
-    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-    <script>
-        $(function () {
-//            jQuery( "*" )
-//            不要使用*选择器, 除非被它自己使用，否则 * 选择器或通用选择器，其速度是极其慢的。
-//            查找文档中的每一个元素（包括 html,head, body 等）。
-
-            var elementCount = $("*").css("border", "3px solid red").length;//13 -> html的所有子元素
-            var test_elementCount = $("#test").find("*").css("border", "3px solid blue").length;//4 -> id=test的所有子元素
-            $("body").prepend("<h3>" + elementCount + " " + test_elementCount + " elements found</h3>");
-        });
-    </script>
 </head>
 <body>
 
@@ -66,4 +54,15 @@
 </div>
 
 </body>
+<script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+<script>
+    //    jQuery( '*' )
+    //    不要使用*选择器, 除非被它自己使用，否则 * 选择器或通用选择器，其速度是极其慢的。
+    //    查找文档中的每一个元素（包括 html,head, body 等）。
+
+    var elementCount = $('*').css('border', '3px solid red').length;//13 -> html的所有子孙元素(包括html)
+    var test_elementCount = $('#test').find('*').css('border', '3px solid blue').length;//4 -> id='test'的所有子孙元素
+
+    $('body').prepend('<h3>' + test_elementCount + '/' + elementCount + ' elements found</h3>');
+</script>
 </html>
