--- a/demo-深入理解JavaScript/2.面向对象入门/1.变量和属性.html
+++ b/demo-深入理解JavaScript/2.面向对象入门/1.变量和属性.html
@@ -8,7 +8,7 @@
 
 </body>
 <script>
-//    "use strict";
+    "use strict";
     //    - 消除Javascript语法的一些不合理、不严谨之处，减少一些怪异行为;
     //    - 消除代码运行的一些不安全之处，保证代码运行的安全；
     //    - 提高编译器效率，增加运行速度；
@@ -16,6 +16,7 @@
 
     var a = 12;//变量：自由的，不属于任何人
     console.log(a);//12
+    console.log(this.a);//12
 
     var arr = [1, 2, 3, 4, 5, 6];
     arr.a = 12;//属性：属于一个对象的变量
