--- a/myStyle/子div居中.html
+++ b/myStyle/子div居中.html
@@ -19,7 +19,7 @@
             left: 50%;
             top: 50%;
 
-            /*translate 2D转换 直接居中*/
+            /*translate 直接居中*/
             -webkit-transform: translate(-50%,-50%);
             -moz-transform: translate(-50%,-50%);
             -o-transform: translate(-50%,-50%);
