--- a/demo-ReactJS/1.helloWorld.html
+++ b/demo-ReactJS/1.helloWorld.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="build/react.js"></script>
-    <script src="build/JSXTransformer.js"></script>
+    <script src="build/react-dom.js"></script>
+    <script src="build/browser.min.js"></script>
 </head>
 <body>
 
-<div id="div1"></div>
+<div id="example"></div>
 
 </body>
-<script type="text/jsx">
-    React.render(
-            <h1>Hello World!</h1>,
-            document.getElementById('div1')
+<script type="text/babel">
+    ReactDOM.render(
+            <h1>Hello, world!</h1>,
+            document.getElementById('example')
     );
 </script>
 </html>
