--- a/demo-ReactJS/copy.html
+++ b/demo-ReactJS/copy.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="build/react.js"></script>
-    <script src="build/JSXTransformer.js"></script>
+    <script src="build/react-dom.js"></script>
+    <script src="build/browser.min.js"></script>
 </head>
 <body>
 
-
+<div id="content"></div>
 
 </body>
+<script type="text/babel">
+
+</script>
 </html>
