--- a/demo-VueJs/1-起步/3.处理用户输入-1.html
+++ b/demo-VueJs/1-起步/3.处理用户输入-1.html
@@ -8,29 +8,24 @@
 <body>
 
 <div id="app">
-
     <p>{{ message }}</p>
-
     <button v-on:click="reverseMessage">Reverse Message</button>
-
 </div>
 
 </body>
-<script type="text/javascript">
-
+<script>
     new Vue({
         el: '#app',
         data: {
             message: 'Hello Vue.js!',
         },
         methods: {
-            reverseMessage: function () {
+            reverseMessage() {
 //                split() 方法用于把一个字符串分割成字符串数组。
 //                join() 方法用于把数组中的所有元素放入一个字符串。
                 this.message = this.message.split('').reverse().join('');//倒叙记录
             }
         }
     })
-
 </script>
 </html>
