--- a/demo-VueJs/1-起步/4.渲染列表-1.html
+++ b/demo-VueJs/1-起步/4.渲染列表-1.html
@@ -16,18 +16,16 @@
 </div>
 
 </body>
-<script type="text/javascript">
-
+<script>
     new Vue({
         el: '#app',
         data: {
             todos: [
                 {text: 'Learn JavaScript'},
                 {text: 'Learn Vue.js'},
-                {text: 'Build Something Awesome'}
+                {text: 'Build Something Awesome'},
             ]
         }
     })
-
 </script>
 </html>
