--- a/test/test.html
+++ b/test/test.html
@@ -8,4 +8,12 @@
 
 
 </body>
+<script>
+    var arr = {a: 1, b: 2};
+    var a = arr;
+    console.log(a);
+    a.a=3;
+    console.log(a);
+    console.log(arr);
+</script>
 </html>
