--- a/我的坑/css/自营式图片.html
+++ b/我的坑/css/自营式图片.html
@@ -7,15 +7,14 @@
         .img1{
             width: 300px;
             height: 300px;
-            background: url(../images/0.jpg) no-repeat center center;
+            background: url(../../images/0.jpg) no-repeat center center;
             background-size:300px 300px;
         }
     </style>
 </head>
 <body>
 
-<img class="img1">
-<img width="300" src="../images/0.jpg">
+<img width="300" src="../../images/0.jpg">
 
 </body>
 </html>
