--- a/待学习/p.html
+++ b/待学习/p.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -13,10 +13,12 @@
 </head>
 <body>
 
-<div style="height: 34px;line-height: 34px;border-bottom:1px solid #ccc;padding:0 12px;background: #f1f1f1;" class="clearFix">
+<div style="height: 34px;line-height: 34px;border-bottom:1px solid #ccc;padding:0 12px;background: #f1f1f1;"
+     class="clearFix">
             <span style="/* float:left; */">
                 <span style="font-size: 12px;color: #242424;">您的当前排名</span>
-                <span style="font-size: 15px;color: #ff6000;vertical-align: middle;" ng-bind="myMemberbao.ranking" class="ng-binding">41</span>
+                <span style="font-size: 15px;color: #ff6000;vertical-align: middle;" ng-bind="myMemberbao.ranking"
+                      class="ng-binding">41</span>
             </span>
 
             <span style="/* float:right; */">
