十一来重新学习JS~1-20

--- a/demo-javascipt/12.style行间样式-Q.html
+++ b/demo-javascipt/12.style行间样式-Q.html
@@ -16,7 +16,6 @@
 
         #div1 {
             background-color: red;
-            /*style属性不会被alert出来*/
         }
 
         #div2 {
@@ -32,23 +31,40 @@
         }
 
         #div3.box2{
-            background-color: saddlebrown;
+            background-color: green;
         }
     </style>
-    <script>
-        function lert() {
-            var oDiv = document.getElementById("div1");
-            alert(oDiv.style.backgroundColor);
-        }
-    </script>
 </head>
 <body>
-<!--行间style级别最高-->
-<!--只有行间style可以被alert提取-->
-<!--????????????????有id的div为什么class没用，通用div时class有用-->
-<div id="div1" class="box" style="background-color: white;"></div>
-<!--box对div2无效-->
-<div id="div2" class="box"></div>
+
+<!--行间样式级别最高,行间样式可以被JS读取-->
+<div id="div1" class="box" style="background-color: white" onclick="alertDvi1Bgc()"></div>
+
+<!--div.box对div2无效-->
+<!--css样式不能被JS读取-->
+<div id="div2" class="box" onclick="alertDvi2Bgc()"></div>
+
+<!--#div3.box2对div2有效-->
 <div id="div3" class="box2"></div>
+
 </body>
+<script>
+
+    function alertDvi1Bgc() {
+        var oDiv = document.getElementById('div1');
+
+        console.log(oDiv.style);
+
+        alert(oDiv.style.backgroundColor);
+    }
+
+    function alertDvi2Bgc() {
+        var oDiv = document.getElementById('div2');
+
+        console.log(oDiv.style);
+
+        alert(oDiv.style.backgroundColor);
+    }
+
+</script>
 </html>
