--- a/demo-javascipt/2.鼠标点击运行函数.html
+++ b/demo-javascipt/2.鼠标点击运行函数.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<!--鼠标单击弹出对话框-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
+
 <!--鼠标点击为onclick函数，然后运行双引号里的函数-->
-<input type="button" value="按钮" onclick="alert('Hello World.');"/>
+<input type="button" value="按钮" onclick="alert('Hello World!')">
+
 </body>
 </html>
