--- a/demo-javascipt/7.js行间样式(大忌)-Q.html
+++ b/demo-javascipt/7.js行间样式(大忌)-Q.html
@@ -5,6 +5,8 @@
     <title></title>
 </head>
 <body>
-<a href="javascript:alert('SB');">链接</a>
+
+<a href="javascript:alert('SB')">链接</a>
+
 </body>
 </html>
