--- a/demo-javascipt/14.window.onload.html
+++ b/demo-javascipt/14.window.onload.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <title></title>
     <script>
-    //函数从顶层往下读取,input没有在行间加载onclick函数
-//    var oBtn = document.getElementById('btn1');//btn1 还没有加载进来。
-//    oBtn.onclick = function () {
-//        alert('a');
-//    };
-        window.onload= function () {
-            var oBtn = document.getElementById("btn1");
+        //        函数从顶层往下读取,input没有在行间加载onclick函数
+        //                var oBtn = document.getElementById('btn1');//btn1 还没有加载进来。
+        //                oBtn.onclick = function () {
+        //                    alert('a');
+        //                };
+        //
+
+        window.onload = function () {
+            var oBtn = document.getElementById('btn1');
+
             oBtn.onclick = function () {
-                alert("a");
+                alert('Hello World!');
             };
         };
     </script>
 </head>
 <body>
+
 <!--提取onclick事件提到script中-->
-<input id="btn1" type="button" value="按钮"/>
+<input id="btn1" type="button" value="按钮">
+
 </body>
 </html>
