--- a/demo-javascipt/6.点击显示隐藏div.html
+++ b/demo-javascipt/6.点击显示隐藏div.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!--单击显示目录-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,26 +8,26 @@
             display: none;
             width: 300px;
             height: 300px;
-            background: gray;
+            background-color: gray;
         }
     </style>
-    <script>
-        function show() {
-            var oDiv = document.getElementById("div1");
-            if (oDiv.style.display == "block")
-                oDiv.style.display = "none";
-            else
-                oDiv.style.display = "block";
-        }
-    </script>
 </head>
 <body>
-<input type="button" value="显示/隐藏" onclick="show();"/><br>
-<!--<div style="width: 100px;height: 100px;background: aqua"></div>-->
-<!--div在button正下方-->
+
+<input type="button" value="显示/隐藏" onclick="divShow()">
 
 <div id="div1">
     呵呵。
 </div>
+
 </body>
+<script>
+
+    function divShow() {
+        var oDiv = document.getElementById('div1');
+
+        oDiv.style.display = (oDiv.style.display === 'block') ? 'none' : 'block';
+    }
+
+</script>
 </html>
