--- a/demo-javascipt/9.函参改变div颜色.html
+++ b/demo-javascipt/9.函参改变div颜色.html
@@ -13,19 +13,19 @@
 </head>
 <body>
 
-<input type="button" value="变宽" onclick="setStyle('width','400px')">
-<input type="button" value="变高" onclick="setStyle('height','400px')">
-<input type="button" value="变红" onclick="setStyle('background-color','red')">
+<input type="button" value="变黑" onclick="setDivColor('black')">
+<input type="button" value="变黄" onclick="setDivColor('yellow')">
+<input type="button" value="变红" onclick="setDivColor('red')">
 
 <div id="div1"></div>
 
 </body>
 <script>
 
-    function setStyle(name, value) {
+    function setDivColor(color) {
         var oDiv = document.getElementById('div1');
 
-        oDiv.style[name] = value;//oDiv.style.name = oDiv.style[name]
+        oDiv.style.backgroundColor = color;//改变bg是改变style里的bg,style里已申明。
     }
 
 </script>
