--- a/Demo-163-JavaScript/5.改变input值.html
+++ b/Demo-163-JavaScript/5.改变input值.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 
-<input id="txt1" type="text" value="我是谁？">
+<input id="txt" type="text" value="我是谁？">
 <input type="button" value="回答我" onclick="setInputValue()">
 
 </body>
 <script>
     //    html怎么写，js就怎么写，样式一样
     function setInputValue() {
-        var oTxt = document.getElementById('txt1');
+        var oTxt = document.getElementById('txt');
 
         oTxt.value = '钟东';
 //        oTxt['value'] = '钟东';
