--- a/Demo-163-JavaScript/8.改变class（忌）.html
+++ b/Demo-163-JavaScript/8.改变class（忌）.html
@@ -34,13 +34,13 @@
 </head>
 <body>
 
-<input type="button" value="变色" onclick="setDivBgcColor()">
+<input type="button" value="变色" onclick="changeDivBgc()">
 
 <div id="div1" class="bgc"></div>
 
 </body>
 <script>
-    function setDivBgcColor() {
+    function changeDivBgc() {
         var oDiv = document.getElementById('div1');
 
         oDiv.className = 'box';//改变类class在JS中必须写成className;
