--- a/Demo-163-JavaScript/9.函参改变div颜色.html
+++ b/Demo-163-JavaScript/9.函参改变div颜色.html
@@ -13,18 +13,18 @@
 </head>
 <body>
 
-<input type="button" value="变黑" onclick="setDivBgcColor('black')">
-<input type="button" value="变黄" onclick="setDivBgcColor('yellow')">
-<input type="button" value="变红" onclick="setDivBgcColor('red')">
+<input type="button" value="变黑" onclick="changeDivBgc('black')">
+<input type="button" value="变黄" onclick="changeDivBgc('yellow')">
+<input type="button" value="变红" onclick="changeDivBgc('red')">
 
 <div id="div1"></div>
 
 </body>
 <script>
-    function setDivBgcColor(color) {
+    function changeDivBgc(color) {
         var oDiv = document.getElementById('div1');
 
-        oDiv.style.backgroundColor = color;//改变bg是改变style里的bg,style里已申明。
+        oDiv.style.backgroundColor = color;
     }
 </script>
 </html>
