--- a/我的坑/css/inline-block默认样式.html
+++ b/我的坑/css/inline-block默认样式.html
@@ -9,13 +9,20 @@
             height: 100px;
             background-color: red;
             display: inline-block;
-            margin: -2px -4px;
-            float: left;
+            margin-right: -8px;
+            margin-bottom: -3px;
+            /*float: left;*/
         }
     </style>
 </head>
 <body>
 
+<div class="a"></div>
+<div class="a"></div>
+<div class="a"></div>
+<div class="a"></div>
+<div class="a"></div>
+<div class="a"></div>
 <div class="a"></div>
 <div class="a"></div>
 <div class="a"></div>
