--- a/我的坑/Architect.html
+++ b/我的坑/Architect.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <style>
         table {
+            width: 1000px;
             border-spacing: 0;
             border-collapse: collapse;
             text-align: center;
@@ -17,41 +18,46 @@
     <tbody>
     <tr>
         <td>基础知识</td>
-        <td>HTML(5)</td>
-        <td>CSS(3)</td>
-        <td>ES5,ES6</td>
-        <td>HTTP协议</td>
+        <td>Html(5)</td>
+        <td>Css(3)</td>
+        <td>Es5/Es6</td>
+        <td>Http协议</td>
     </tr>
     <tr>
-        <td>基础框架</td>
-        <td>jQuery</td>
-        <td>jQueryMobile</td>
-        <td>zepto</td>
+        <td>CSS框架</td>
+        <td>Sass</td>
+    </tr>
+    <tr>
+        <td>JS框架</td>
+        <td>Jquery</td>
+        <td>Zepto</td>
     </tr>
     <tr>
         <td>UI框架</td>
-        <td>SASS</td>
         <td>Bootstrap</td>
-        <td>jQueryUI</td>
+        <td>JqueryUI</td>
         <td>Ionic</td>
-        <td>ReactNative</td>
-        <td>ExtJs</td>
     </tr>
     <tr>
-        <td>MVC框架</td>
-        <td>AngularJs</td>
-        <td>BackboneJs</td>
-        <td>VueJs</td>
-        <td>ReactJs</td>
+        <td>MV*框架</td>
+        <td>Angular</td>
+        <td>Vue</td>
+        <td>React</td>
     </tr>
     <tr>
         <td>前端构建</td>
-        <td>grunt</td>
-        <td>gulp</td>
-        <td>webpack</td>
-        <td>requireJs</td>
+        <td>Gulp</td>
+        <td>Webpack</td>
+    </tr>
+    <tr>
+        <td>跨平台</td>
+        <td>ReactNative</td>
+    </tr>
+    <tr>
+        <td>后端</td>
         <td>NodeJs</td>
     </tr>
+
     </tbody>
     <tr></tr>
 </table>
